# birdwatcher

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  idea.md  pyproject.toml
docs/: ARCHITECTURE.md  change-stream-migration.md  es-search-improvements.md  requirements.md  research.md  sqs-migration.md
docs/plans/: 2026-03-29-design-review-v2.md  2026-03-29-design-review-v3.md  2026-03-29-design-review-v4.md  2026-03-29-design-review-v5.md  2026-03-29-design-review-v6.md  2026-03-29-design-review.md  2026-03-29-event-platform-design-v2.md  2026-03-29-event-platform-design-v3.md  2026-03-29-event-platform-design-v4.md  2026-03-29-event-platform-design-v5.md  2026-03-29-event-platform-design-v6.md  2026-03-29-event-platform-design-v7.md  2026-03-29-event-platform-design.md  2026-03-29-event-platform-implementation.md  2026-03-30-module-reorganization-design.md  2026-03-30-module-reorganization.md  2026-03-30-queue-abstraction-refactor-design.md  2026-03-30-queue-abstraction-refactor.md
src/: config.py  main.py
src/analytics/: router.py  schemas.py  service.py
src/cache/: middleware.py  service.py
src/core/: cache.py  database.py  exceptions.py  logging.py  text.py
src/events/: dependencies.py  router.py  schemas.py  service.py
src/health/: router.py
src/ingestion/: worker.py
src/middleware/: rate_limit.py
src/queue/: base.py  dlq.py  memory.py
src/search/: router.py  schemas.py  service.py
src/tests/integration/: conftest.py  test_health.py  test_ingestion.py  test_realtime_cache.py  test_search.py  (+1 more)
(+10 files in other folders)
